--- a/popup.css
+++ b/popup.css
@@ -55,6 +55,23 @@ html, body {
 	color: #333;
 }
 
+#welcome {
+	padding: 10px;
+}
+
+#welcome h1 {
+	margin: 10px 0 0 0;
+	font-size: 25px;
+	color: #406ea2;
+}
+
+#welcome p{
+	margin: 0;
+	padding: 0;
+	font-weight: 300;
+	font-size: 14px;
+}
+
 #search_results ul {
 	list-style: none;
 	margin: 0;
@@ -126,7 +143,7 @@ html, body {
 #search_results ul li.results-header {
 	font-weight: bold;
 	text-transform: uppercase;
-	color: #407cb3;
+	color: #406ea2;
 	padding-left: 5px;
 }
 
