--- a/popup.css
+++ b/popup.css
@@ -19,7 +19,7 @@ html, body {
 #logo {
 	width: 50px;
 	height: 50px;
-	background: url('logo.jpg');
+	background: url('assets/logo.jpg');
 	border-radius: 5px 0px 0px 0px;
 	border-bottom: 3px solid #e0e0e0;
 }
